--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.4",
     "bootstrap": "^5.2.3",
+    "fast-average-color": "^9.3.0",
     "google-auth-library": "^8.7.0",
     "googleapis": "^110.0.0",
     "react": "^18.2.0",
