--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
     "description": "production ready server",
     "main": "server.js",
     "scripts": {
-        "start": "nodemon server.js",
+        "start": "node server.js",
+        "dev": "nodemon server.js",
         "server:dev": "nodemon server.js",
         "server:prod": "set NODE_ENV=production&&node server.js",
         "server:prod:mac": "export NODE_ENV=production&&node server.js"
